--- a/client/package.json
+++ b/client/package.json
@@ -1,57 +1,44 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "4.5.0",
-    "@bytemd/plugin-breaks": "1.9.0",
-    "@bytemd/plugin-frontmatter": "1.9.0",
-    "@bytemd/plugin-gfm": "1.7.0",
-    "@bytemd/plugin-highlight": "1.7.0",
-    "@bytemd/react": "1.7.0",
-    "@octokit/core": "3.2.5",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.8.1",
-    "@types/jest": "26.0.20",
-    "@types/node": "12.20.4",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.1",
-    "antd": "4.12.3",
-    "github-markdown-css": "4.0.0",
-    "mobx": "6.1.8",
-    "mobx-react-lite": "3.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "typescript": "4.2.3",
-    "vscode-webview-rpc": "0.0.3"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "license": "MIT",
   "scripts": {
-    "start": "build-scripts --config build.config.js start",
-    "build": "build-scripts --config build.config.js build"
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack",
+    "lint": "eslint --cache --fix ./ --ext .js,jsx"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "keywords": [],
+  "author": "",
   "devDependencies": {
-    "@alib/build-scripts": "0.1.30",
-    "@craco/craco": "6.1.1",
-    "@types/lodash": "4.14.168",
-    "build-plugin-react-app": "1.7.13"
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.35.0",
+    "eslint-config-alloy": "^4.9.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.8.4",
+    "react-refresh": "^0.14.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.21.0",
+    "core-js": "^3.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
