--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.76.0",
-    "@typespack-env": "^1.18.0",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vscode/test-web": "^0.0.35",
